deployments/bazarr/bazarr/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
spec:
  selector:
    app: bazarr
  ports:
    - port: 6767
      targetPort: 6767
      name: bazarr-web
